完成了手机端功能but搜索

--- a/css/ystyle.css
+++ b/css/ystyle.css
@@ -1924,7 +1924,7 @@
     margin: 3% 3%;
 }
 
-.y-ph-fang-box2>.y-ph-fang-body>ul>li>img {
+.y-ph-fang-box2>.y-ph-fang-body>ul>li>a>img {
     width: 100%;
 }
 
