--- a/css/wstyle.css
+++ b/css/wstyle.css
@@ -421,7 +421,10 @@ nav:hover {
     height: 710px;
     border: 1px solid rgb(163, 160, 160, .5);
 }
-
+.w-index-banner-ul>li:hover img{
+    transition: all 0.5s ease 0s;
+    transform: scale(1.1);
+}
 .w-index-banner-ul>li>img {
     width: 100%;
 }
