--- a/css/wstyle.css
+++ b/css/wstyle.css
@@ -372,7 +372,6 @@ nav:hover {
 }
 
 .w-index-box3>.w-index-ul>div:hover::before {
-    /* background: -webkit-linear-gradient(bottom,#4990ff,#21cefe); */
     opacity: 1;
 }
 
@@ -1141,7 +1140,6 @@ nav:hover {
     z-index: 0;
 }
 .w-wh-box4>ul>li::before{
-    border-radius: 10px;
     content:'';
     position: absolute;
     left: 0; 
@@ -1488,7 +1486,8 @@ nav:hover {
 
 .w-ct-box2>.w-ct-return {
     font-size: 22px;
-    color: #298be2;
+    color: #0ba360;
+    text-decoration: none
 }
 
 .w-ct-box2>.w-ct-return>.iconfont {
@@ -1604,11 +1603,11 @@ nav:hover {
 }
 
 .w-ct-box3>ul>li:hover h3 {
-    color: #5966d1;
+    color: #0ba360;
 }
 
 .w-ct-box3>ul>li:hover p {
-    color: #5966d1;
+    color: #0ba360;
 }
 
 
@@ -1649,28 +1648,42 @@ nav:hover {
     float: left;
     box-shadow: 0 0 5px rgb(163, 160, 160, .5);
     margin: 21px 0;
-    height: 250px;
+    height: 450px;
     border-radius: 10px;
+    position: relative;
+    z-index: 0;
+}
+.w-ct-box4>ul>li::before{
+    border-radius: 10px;
+    content:'';
+    position: absolute;
+    left: 0; 
+    top: 0; 
+    right: 0; 
+    bottom: 0;
+    background: -webkit-linear-gradient(top,#43e97b,#0ba360);
+    opacity: 0; 
+    transition: opacity 1s;
+    z-index: -1;
 }
 .w-ct-box4>ul>li>img{
-    width: 80px;
-    margin-top: 30px;
+    width: 100%;
 }
 .w-ct-box4>ul>li>h3 {
     font-weight: bold;
     font-size: 23px;
-    padding: 30px 20px 10px 20px;
+    padding: 20px 20px 10px 20px;
 }
 
 .w-ct-box4>ul>li>p {
     font-size: 19px;
     padding: 10px 20px;
     color: #666666;
-    line-height: 35px;
+    line-height: 32px;
 }
 
-.w-ct-box4>ul>li:hover {
-    background: #92d4ff;
+.w-ct-box4>ul>li:hover::before {
+    opacity: 1;
 }
 
 .w-ct-box4>ul>li:hover h3 {
