--- a/css/ystyle.css
+++ b/css/ystyle.css
@@ -447,7 +447,7 @@ transform: scale(1.2)
 }
 
 .y-detail-box2>.y-detail-title>ul>.active{
-    border-bottom: 3px solid #5966d1;
+    border-bottom: 3px solid #4990ff;
 }
 
 .y-detail-box2>.y-detail-title>ul>.active>a {
