--- a/css/ystyle.css
+++ b/css/ystyle.css
@@ -210,12 +210,12 @@
     border-radius: 10px;
     content:'';
     position: absolute;
-    left: 0; 
-    top: 0; 
-    right: 0; 
+    left: 0;
+    top: 0;
+    right: 0;
     bottom: 0;
     background: -webkit-linear-gradient(top,#4990ff,#21cefe);
-    opacity: 0; 
+    opacity: 0;
     transition: opacity 1s;
     z-index: -1;
 }
@@ -223,7 +223,7 @@
     color: #fff;
 }
 .y-wu-box1>div>.y-wu-body1>ul>li:hover::before {
-    opacity: 1; 
+    opacity: 1;
 }
 .y-wu-box1>div>.y-wu-body1>ul>li:hover .y-wu-p2 {
     color: #fff;
@@ -1227,7 +1227,7 @@ transform: scale(1.2)
 }
 
 .y-power-box2>.y-power-return>a {
-    color: #298be2;
+    color: #00cdac;
     font-size: 22px;
 }
 
@@ -1327,23 +1327,48 @@ transform: scale(1.2)
 }
 
 .y-power-box3>.y-power-body2>ul>li {
-    width: 350px;
-    height: 400px;
+    width: 31%;
+    margin: 25px 14px;
+    height: 370px;
     float: left;
-    margin: 25px 25px;
-    position: relative;
-    border-radius: 5px;
     box-shadow: 0 0 5px rgb(163, 160, 160, .5);
+    border-radius: 10px;
+    color: #fff;
+    position: relative;
+    z-index: 0;
+}
+.y-power-box3>.y-power-body2>ul>li:nth-child(1){
+    background: url(../img/power/power_x1.png) no-repeat;
+    background-position:center;
+    background-size: 110% 110%;
+}
+.y-power-box3>.y-power-body2>ul>li:nth-child(2){
+    background: url(../img/power/power_x2.png) no-repeat;
+    background-position:center;
+    background-size: 110% 110%;
+}
+.y-power-box3>.y-power-body2>ul>li:nth-child(3){
+    background: url(../img/power/power_x3.png) no-repeat;
+    background-position:center;
+    background-size: 110% 110%;
+}
+.y-power-box3>.y-power-body2>ul>li:nth-child(4){
+    background: url(../img/power/power_x4.png) no-repeat;
+    background-position:center;
+    background-size: 110% 110%;
+}
+.y-power-box3>.y-power-body2>ul>li:nth-child(5){
+    background: url(../img/power/power_x5.png) no-repeat;
+    background-position:center;
+    background-size: 110% 110%;
+}
+.y-power-box3>.y-power-body2>ul>li:nth-child(6){
+    background: url(../img/power/power_x6.png) no-repeat;
+    background-position:center;
+    background-size: 110% 110%;
 }
 
-.y-power-box3>.y-power-body2>ul>li:hover {
-    color: #fff;
-    background: #92d4ff;
-}
 
-.y-power-box3>.y-power-body2>ul>li:hover p {
-    color: #fff;
-}
 
 .y-power-box3>.y-power-body2>ul>li>h3 {
     font-size: 25px;
@@ -1355,7 +1380,7 @@ transform: scale(1.2)
 .y-power-box3>.y-power-body2>ul>li>p {
     font-size: 19px;
     padding: 10px 20px;
-    color: #666666;
+    color: #fff;
     line-height: 35px;
     text-align: left;
     font-weight: 500;
