--- a/css/ystyle.css
+++ b/css/ystyle.css
@@ -1409,6 +1409,7 @@ transform: scale(1.2)
     width: 100%;
     margin: 0 auto;
     background: #f4f8ff;
+    padding-bottom: 20px;
 }
 
 .y-power-box4>.y-power-title4 {
