--- a/css/ystyle.css
+++ b/css/ystyle.css
@@ -1688,11 +1688,11 @@ transform: scale(1.2)
 }
 
 .y-bar-box4>.y-bar-body4>ul>li {
-    width: 31%;
+    width: 47%;
     float: left;
     box-shadow: 0 0 5px rgb(163, 160, 160, .5);
     margin: 21px 14px;
-    height: 450px;
+    height: 560px;
     border-radius: 10px;
     position: relative;
     z-index: 0;
@@ -1919,6 +1919,7 @@ transform: scale(1.2)
     padding: 20px 30px;
     font-weight: bold;
     text-align: center;
+    color: #fff;
 }
 
 .y-bar-box6>.y-bar-body6>ul>li>p {
@@ -1927,7 +1928,7 @@ transform: scale(1.2)
     line-height: 35px;
     letter-spacing: 4px;
     font-weight: 500;
-    color: #666666;
+    color: #fff;
 }
 
 .y-bar-box7 {
